--- a/css/default.css
+++ b/css/default.css
@@ -36,7 +36,7 @@ html,body {height:100%;}
 body {color:#444;font:12px/1.5 Nanum Gothic, Dotum, '돋움', sans-serif;-webkit-text-size-adjust:none;}
 a {color:#444;text-decoration:none;}
 ul, ol, li {list-style:none;}
-table {width:100%;border-collapse:collapse;border:0;table-layout:fixed;}
+table {width:100%;border-collapse:collapse;border:0;}
 colgroup {background:none;}
 input, select, textarea, button {color:#444;vertical-align:middle;font:12px/1.5 Nanum Gothic, Dotum, '돋움', Sans-serif;}
 fieldset, img {border:0;}
@@ -47,7 +47,7 @@ address, em {font-style:normal;}
 button {overflow:visible;cursor:pointer;background:none;border:0;}
 
 textarea {padding:0 5px;background:#fff;border:1px solid #e9e9e9;resize:none;border-radius:1px;}
-select {border-radius:0;border:1px solid #e9e9e9;}
+select {padding:0 5px;border-radius:0;border:1px solid #e9e9e9;}
 input.txt {line-height:1.1;padding:0 5px;border-radius:0;border:1px solid #e9e9e9;}
 input.chk {width:13px;height:13px;vertical-align:-2px;}
 
@@ -63,7 +63,11 @@ input.chk {width:13px;height:13px;vertical-align:-2px;}
 .ui-datepicker td a {display:block;padding:5px;text-align:center;}
 
 @media all and (max-width:1023px) {
-	body, input, select, textarea, button {font-size:1.4rem}
+	body, input, select, textarea, button {font-size:1.4rem;-webkit-appearance:none;-moz-appearance:none;appearance:none;}
 	textarea, input.txt {padding:0 0.5rem;border-width:0.1rem;}
-	input.chk {width:1.3rem;height:1.3rem;}
+	select {padding:0 2.5rem 0 1rem;background:url(../images/bg_select.png) no-repeat 100% 0;background-size:auto 100%;}
+	input.chk {width:1.5rem;height:1.5rem;border:1px solid #e9e9e9;}
+	input[type="radio"] {border-radius:50%;background:url(../images/bg_radio.png) no-repeat;background-size:auto 100%;}
+	input[type="checkbox"] {background:url(../images/bg_checkbox.png) no-repeat;background-size:auto 100%;}
+	input.chk:checked {background-position:-1.3rem 0;}
 }
