--- a/css/default.css
+++ b/css/default.css
@@ -63,11 +63,11 @@ input.chk {width:13px;height:13px;vertical-align:-2px;}
 .ui-datepicker td a {display:block;padding:5px;text-align:center;}
 
 @media all and (max-width:1023px) {
-	body, input, select, textarea, button {font-size:1.4rem;-webkit-appearance:none;-moz-appearance:none;appearance:none;}
-	textarea, input.txt {padding:0 0.5rem;border-width:0.1rem;}
-	select {padding:0 2.5rem 0 1rem;background:url(../images/bg_select.png) no-repeat 100% 0;background-size:auto 100%;}
+	body, input, select, textarea, button {font-size:1.2rem;-webkit-appearance:none;-moz-appearance:none;appearance:none;}
+	textarea, input.txt {padding:0 .5rem;border-width:.1rem;}
+	select {padding:0 2.5rem 0 .5rem;background:url(../images/bg_select.png) no-repeat 100% 0;background-size:auto 100%;}
 	input.chk {width:1.5rem;height:1.5rem;border:1px solid #e9e9e9;}
-	input[type="radio"] {border-radius:50%;background:url(../images/bg_radio.png) no-repeat;background-size:auto 100%;}
-	input[type="checkbox"] {background:url(../images/bg_checkbox.png) no-repeat;background-size:auto 100%;}
+	input[type="radio"] {border-radius:50%;background:#fff url(../images/bg_radio.png) no-repeat;background-size:auto 100%;}
+	input[type="checkbox"] {background:#fff url(../images/bg_checkbox.png) no-repeat;background-size:auto 100%;}
 	input.chk:checked {background-position:-1.3rem 0;}
 }
