--- a/css/common.css
+++ b/css/common.css
@@ -412,10 +412,13 @@ table .alL {text-align:left;}
 	.bbsList {border-top:.2rem solid #2b7cbb;padding:0;}
 	.bbsList li {border-bottom:.1rem solid #e9e9e9;}
 	.bbsList li > a {display:block;}
-	.bbsList li > a > span {display:inline-block;width:auto!important;min-height:100%;padding:0;text-align:left;}
-	.bbsList li .tit {display:none;position:static;line-height:1.5;text-align:left;border-bottom:0;cursor:pointer;z-index:0;}
-	.bbsList li:first-child .tit {display:none;}
+	.bbsList li > a > span {display:inline-block;width:auto!important;min-height:100%;margin:0 .8rem 0 0;padding:0;text-align:left;}
+	.bbsList li .tit {display:inline-block;position:static;line-height:1.5;text-align:left;border-bottom:0;cursor:pointer;z-index:0;}
+	.bbsList li .tit:after {content:".";}
+	.bbsList li:first-child .tit {display:inline-block;}
 	.bbsList .subject {width:100%!important;text-align:left;}
+	.bbsList li:first-child .subject .tit,
+	.bbsList .subject .tit {display:none;}
 	.bbsList .subject span {display:block;max-width:100%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;vertical-align:middle;}
 	.bbsList .file span {display:inline-block;padding-left:18px;background:url(../images/icon_file.gif) no-repeat 0 50%;color:#2b7cbb;font-weight:bold;}
 	.bbsList .lineType1 {background:#f3c4c4;}
@@ -431,17 +434,15 @@ table .alL {text-align:left;}
 
 	.bbsView {overflow:hidden;border-top:.2rem solid #2b7cbb;border-bottom:.1rem solid #e9e9e9;}
 	.bbsView table, .bbsView thead, .bbsView tbody {display:block;width:100%;}
-	.bbsView thead th {display:block;width:100% !important;padding:.5rem 1rem;border-bottom:0;font-size:1.4rem;line-height:1.1;box-sizing:border-box;}
+	.bbsView thead th {display:block;width:100% !important;padding:.5rem 1rem;font-size:1.4rem;line-height:1.1;box-sizing:border-box;}
 	.bbsView tbody tr {display:block;width:100% !important;}
-	.bbsView tbody tr:after {content:"";display:block;clear:both;}
-	.bbsView tbody th {float:left;width:25% !important;padding:.4rem 0;background:#e9e9e9;border-top:.1rem solid #e9e9e9;box-sizing:border-box;}
-	.bbsView tbody td {float:left;width:75% !important;padding:.4rem;border-top:.1rem solid #e9e9e9;box-sizing:border-box;}
-	.bbsView .name {padding:.4rem;}
+	.bbsView tbody th {float:left;width:8rem!important;padding:.4rem 1rem;background:none;box-sizing:border-box;text-align:left;}
+	.bbsView tbody td {display:block;width:100% !important;padding:.4rem 1rem !important;border-top:0;border-bottom:.1rem solid #e9e9e9;box-sizing:border-box;}
 	.bbsView .date {text-align:left;}
 	.bbsView .file {width:100% !important;padding:1rem 1.5rem;}
 	.bbsView .file span {display:block;width:100%;}
 	.bbsView .file span a {display:block;margin:.2rem 0;padding-left:1.8rem;}
-	.bbsView .viewCont {padding:1.5rem;border-top:.1rem solid #e9e9e9;}
+	.bbsView .viewCont {padding:1.5rem;border-top:0;}
 	.bbsView .viewAnswer {padding:1.5rem;border-top:.1rem solid #e9e9e9;}
 	.bbsView .viewAnswer .answerDate {margin:0 0 1rem;}
 	.bbsView .viewNav li {position:relative;padding:.8rem 0 .8rem 8.5rem;border-top:.1rem solid #e9e9e9;}
@@ -452,10 +453,10 @@ table .alL {text-align:left;}
 	.bbsWrite, .bbsWrite tbody, .bbsWrite tr {display:block;width:100%;}
 	.bbsWrite tr:after {content:"";display:block;clear:both;}
 	.bbsWrite th,
-	.bbsWrite td {display:inline-block;padding:.5rem 0;text-align:left;border-bottom:.1rem solid #e9e9e9;box-sizing:border-box;}
-	.bbsWrite th {width:25% !important;padding-left:.5rem}
-	.bbsWrite td {width:75% !important;}
-	.bbsWrite .subject .txt {width:100%;line-height:18px;border:1px solid #e9e9e9;box-sizing:border-box;}
+	.bbsWrite td {display:block;padding:.5rem 0;text-align:left;box-sizing:border-box;}
+	.bbsWrite th {float:left;width:8rem !important;padding:.5rem 1rem;border:0 !important;}
+	.bbsWrite td {display:block;width:100% !important;padding:.5rem 1rem;border-bottom:.1rem solid #e9e9e9;}
+	.bbsWrite .subject .txt {line-height:18px;border:1px solid #e9e9e9;box-sizing:border-box;}
 	.bbsWrite .fileAdd {width:2rem;height:2rem;font:0/0 a!important}
 	.bbsWrite input[type="file"] {width:85%;}
 	.bbsWrite .editer {width:100% !important;padding:2rem 0 0;border-top:.1rem solid #444;}
